Adicionei um paragráfo
Novo lorem

--- a/site-exmplo/index.html
+++ b/site-exmplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos molestias eveniet quas! Id modi exercitationem molestiae veniam eius fugit quo iusto. Natus quia obcaecati quos blanditiis voluptates tempore. Voluptatem, enim.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur sapiente totam similique repellat autem nam suscipit, ipsa doloremque? Aspernatur, maiores facere architecto doloremque voluptas illum iste officiis pariatur animi temporibus?</p>
 </body>
 </html>
